src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>BRI_TGT_Education_Level__c</fullName>
        <label>TGT Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8th Grade or Less</fullName>
                </value>
                <value>
                    <fullName>Four Year College Degree</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>Graduate School</fullName>
                </value>
                <value>
                    <fullName>High School Graduate</fullName>
                </value>
                <value>
                    <fullName>Some College</fullName>
                </value>
                <value>
                    <fullName>Some High School</fullName>
                </value>
                <value>
                    <fullName>Two Year Degree</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_TGT_Relation__c</fullName>
        <label>TGT Relation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FOB</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>MOB</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Total_Child_MOB_is_Responsible_for__c</fullName>
        <label>Total Child MOB is Responsible for</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Total_In_Family__c</fullName>
        <label>Total In Family</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Type_Housing__c</fullName>
        <label>Type Housing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Types_Of_Substance__c</fullName>
        <label>Types Of Substance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drugs</fullName>
                </value>
                <value>
                    <fullName>Alcohol</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Unique__c</fullName>
        <label>Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Week_adjustment__c</fullName>
        <label>Week adjustment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Xfer1__c</fullName>
        <label>Xfer1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Xfer2__c</fullName>
        <label>Xfer2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_harming_myself__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking Assessment field value for question 10</description>
        <label>Harming Myself</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CESD_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking the score value is between 15-21</description>
        <label>CESD Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_DOB__c</fullName>
        <label>Child DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Person</relationshipLabel>
        <relationshipName>Person</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_In__c</fullName>
        <label>Date In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDC_Date__c</fullName>
        <label>EDC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPDS_Due_Status__c</fullName>
        <formula>IF( NOT(ISBLANK(BRI_Consent_Date__c)) ,
(IF( BRI_Consent_Date__c &lt;  (Birthdate + 42) , 
          IF( TODAY() &lt;= (Birthdate + 42),&apos;Due in &apos;+ TEXT(((Birthdate + 42)- TODAY()))+&apos; Days&apos;,&apos;Late&apos; ), 
    IF( BRI_Consent_Date__c &gt;=  (Birthdate + 42),&apos;Due in &apos;+ TEXT(((BRI_Consent_Date__c + 14)- TODAY()))+&apos; Days&apos;,&apos;Late&apos;)
   )
 ),
 &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPDS Due Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOB_Begin_Prenatal_Care__c</fullName>
        <label>MOB Begin Prenatal Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No_provider</fullName>
                </value>
                <value>
                    <fullName>Has Provider – Regular Contact</fullName>
                </value>
                <value>
                    <fullName>Has Provider – Sporadic Contact</fullName>
                </value>
                <value>
                    <fullName>On Medicaid Wait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Birth__c</fullName>
        <label>Multi Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPosition__c</fullName>
        <label>PPosition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pregnancy_Problems__c</fullName>
        <label>Pregnancy Problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PwhosePartner__c</fullName>
        <label>PwhosePartner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_depression__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field “client is receiving depression services” in amendment is left NULL or marked “No”</description>
        <label>Receiving depression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Person</relationshipLabel>
        <relationshipName>Person</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Person</relationshipLabel>
        <relationshipName>Person</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_EPDS_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total EPDS Score</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>BRI_TGT_Relation__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Person</label>
    </listViews>
    <listViews>
        <fullName>All_Adult_1</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>BRI_TGT_Relation__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>All Adult 1</label>
    </listViews>
    <listViews>
        <fullName>All_Adult_2</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>BRI_TGT_Relation__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Adult2</value>
        </filters>
        <label>All Adult 2</label>
    </listViews>
    <listViews>
        <fullName>All_TGT_Child</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>BRI_TGT_Relation__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.TGT_Child</value>
        </filters>
        <label>All TGT Child</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Adult1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Adult1</value>
        </filters>
        <label>My Adult1</label>
    </listViews>
    <listViews>
        <fullName>My_Adult2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Adult2</value>
        </filters>
        <label>My Adult2</label>
    </listViews>
    <listViews>
        <fullName>My_TGT_Child</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.TGT_Child</value>
        </filters>
        <label>My TGT Child</label>
    </listViews>
    <recordTypes>
        <fullName>Adult1</fullName>
        <active>true</active>
        <label>Adult 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Adult1_EPDS</fullName>
        <active>true</active>
        <label>Adult1 EPDS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Adult2</fullName>
        <active>true</active>
        <label>Adult 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Adult2_EPDS</fullName>
        <active>true</active>
        <label>Adult2 EPDS</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPCS_Persons</fullName>
        <active>false</active>
        <label>CPCS Persons</label>
    </recordTypes>
    <recordTypes>
        <fullName>Child</fullName>
        <active>false</active>
        <label>Child</label>
    </recordTypes>
    <recordTypes>
        <fullName>FOB</fullName>
        <active>false</active>
        <label>FOB</label>
    </recordTypes>
    <recordTypes>
        <fullName>HSI_Persons</fullName>
        <active>false</active>
        <label>HSI Persons</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household_Member</fullName>
        <active>false</active>
        <label>Household Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>MOB</fullName>
        <active>false</active>
        <label>MOB</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>false</active>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>TGT_Child</fullName>
        <active>true</active>
        <label>TGT - Child</label>
    </recordTypes>
    <recordTypes>
        <fullName>User</fullName>
        <active>false</active>
        <description>System Users</description>
        <label>User</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>